[gd_scene load_steps=5 format=3 uid="uid://dostuneqw5k1i"]

[ext_resource type="Script" path="res://scripts/components/StorageSlot.gd" id="1_8ybud"]
[ext_resource type="Texture2D" uid="uid://cyjvyvgfqstyo" path="res://assets/ui/slot_bg.png" id="2_0yujl"]
[ext_resource type="Texture2D" uid="uid://dje2j5j6nxdnn" path="res://assets/ui/star.png" id="3_75ohk"]
[ext_resource type="Texture2D" uid="uid://b5byfkgc7ynjr" path="res://assets/ui/money_icon.png" id="4_kxgqr"]

[node name="StorageSlot" type="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 80.0
script = ExtResource("1_8ybud")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0yujl")
expand_mode = 1
stretch_mode = 5

[node name="ProductIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QualityStars" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 15.0
grow_horizontal = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("3_75ohk")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("3_75ohk")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("3_75ohk")
expand_mode = 1
stretch_mode = 5

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -20.0
offset_right = 15.0
offset_bottom = -5.0
grow_vertical = 0
texture = ExtResource("4_kxgqr")
expand_mode = 1
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 11
text = "25â‚½"
horizontal_alignment = 1
vertical_alignment = 1